# faq-mate

./: Dockerfile  main.py  pyproject.toml
src/: chatbot.py
